fixed read more button alignment and basic box look-and-feel

--- a/jade/assets/stylesheets/card.css
+++ b/jade/assets/stylesheets/card.css
@@ -10,6 +10,7 @@
 /* box on home page */
 .box-main {
     width: 100%;
+    padding-bottom:20px;
     margin-bottom: 20px;
     box-shadow: 0 20px 50px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     background-color: white;
