--- a/jade/assets/stylesheets/style.css
+++ b/jade/assets/stylesheets/style.css
@@ -12,10 +12,6 @@ html body {
     margin-bottom:30px;
 }
 
-.container{
-    width: 100% !important;
-}
-
 p {
     margin-left: 40px;
     margin-right:40px;
@@ -60,6 +56,12 @@ margin-left: 20%;
     height:200px;
     overflow: hidden;
 }
+/* question mark - about this theme */
+#about {
+    position: fixed;
+    right: 10px;
+    top: 10px;
+}
 
 #backtotop{
     position:absolute;
@@ -71,6 +73,7 @@ margin-left: 20%;
   margin-right:20%;
 }
 
+/* aligning the font-awesome icons*/
 .fa-2x {
     margin-top: 30px;
     margin-left: 50px;
